<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SpeakEnglish</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="greeting">Pronunciation in English</string>
    <string name="verifySpeeck">Speech to Text</string>
    <string name="training">Start</string>
    <string name="next">Next</string>
  	<string name="tryAgain">Retry</string>
    <string name="lesson">Lesson</string>
    <string name="lessonNum">0</string>
    <string name="pronunciation">Pronunciation</string>
               
</resources>
