<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  android:background="#ACD6FF"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">

<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ACD6FF"
    android:useDefaultMargins="true" >

    <TextView
        android:id="@+id/greeting"
		android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#00FFFF"
        android:text="@string/greeting"
        android:textColor="#0000FF"
        android:textSize="20dip" />

 	<TextView
        android:id="@+id/lesson"
		android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lesson"
        android:textColor="#00FF00"
        android:layout_below="@+id/greeting"
        android:textSize="20dip" />

    <EditText
        android:id="@+id/lessonNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:layout_below="@+id/greeting"
        android:layout_toRightOf="@+id/lesson"
        android:textColor="#FF0000" >
    </EditText>
      
    <Button
        android:id="@+id/training"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lesson"
        android:text="@string/training" />
    
     <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lesson"
        android:layout_toRightOf="@+id/training"
        android:text="@string/next" />
        
    <Button
        android:id="@+id/tryAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lesson"
        android:layout_toRightOf="@+id/next"
        android:text="@string/tryAgain" /> 
 
    <TextView 
	    android:id="@+id/key"
        android:textSize="20dip"
        android:layout_below="@+id/training"
        android:background="#00FFFF"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content">
	</TextView>
	
    <TextView 
	    android:id="@+id/echo"
	    android:layout_below="@+id/key"
        android:textSize="24dip"
        android:background="#FFFF00"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content">
	</TextView>

    <TextView 
	    android:id="@+id/mySpeak"
	    android:layout_below="@+id/echo"
        android:textSize="24dip"
        android:background="#FFFFFF"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content">
	 </TextView>
	    	
</RelativeLayout>

</ScrollView>